# tails

./: .gitignore  manage.py  pyproject.toml
core/: views.py
core/templates/: home.html
tails/: asgi.py  settings.py  urls.py  wsgi.py
theme/templates/: base.html
